@startuml

title Clean architecture example

interface CapitalizeLettersInputPort {
    + capitalizeLetters(String)
}

interface CapitalizeLettersOutputPort {
    + display()
}

interface InputReader {
    + String getInput()
}

interface OutputDisplayer {
    + void display(String)
}

class CapitalizeLettersUseCase {
    - CapitalizeLettersOutputPort
    + void capitalizeLetters(String)
}

class Controller {
    - InputReader
    - CapitalizeLettersInputPort
    + void capitalizeLetters(String)
}

class ConsolePrinterPresenter {
    - OutputDisplayer
    + void display(String)
}

class ScannerInputReader {
    + String getInput()
}

class ConsoleOutputDisplayer {
    + void display(String)
}

class Main{

}
note left: Entry point

CapitalizeLettersInputPort <|.. CapitalizeLettersUseCase
CapitalizeLettersOutputPort <-- CapitalizeLettersUseCase
CapitalizeLettersInputPort <-- Controller
InputReader <-- Controller
CapitalizeLettersOutputPort <|.. ConsolePrinterPresenter
OutputDisplayer <-- ConsolePrinterPresenter
InputReader <|.. ScannerInputReader
OutputDisplayer <|.. ConsoleOutputDisplayer
Controller <-- Main

@enduml